Added chatroom layout to project. Update styles. Update buttons classes. 21/12/2016 9:15 PM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/globals/icons.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/globals/icons.css
@@ -37,3 +37,7 @@ i.icon.icon-question-mark {
     width: 16px;
     vertical-align: middle;
 }
+
+i.icon.icon-quotation-sent {
+    background-image: url(/assets/images/success.png);
+}
