--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/createUserAdmin.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/createUserAdmin.html.twig
@@ -17,7 +17,7 @@
                         <img id="entertainerImg" class="category-img" src="{{ asset('assets/images/pers1.png') }}" alt="">
 
                         <div class="controls category-controls">
-                            <div class="button-gradient follow">
+                            <div class="button-gradient follow orange">
                                 <button id="entertainerBtn" class="btn">I am an entertainer</button>
                             </div>
                         </div>
@@ -26,7 +26,7 @@
                         <img id="customerImg" class="category-img" src="{{ asset('assets/images/Group23.png') }}" alt="">
 
                         <div class="controls category-controls">
-                            <div class="button-gradient follow">
+                            <div class="button-gradient follow orange orange">
                                 <button id="customerBtn" class="btn">I want to book entertainment</button>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                                 </div>
 
                                 <div class="controls">
-                                    <div class="button-gradient filled">
+                                    <div class="button-gradient filled orange">
                                         <button id="stageThreeNextCustomerAdmin" type="submit" class="btn register submit">Register Now</button>
                                     </div>
 
@@ -154,7 +154,7 @@
                             </div>
 
                             <div class="controls">
-                                <div class="button-gradient filled">
+                                <div class="button-gradient filled orange">
                                     <button  id="stageThreeNextAdmin" type="submit" class="btn register submit">Register Now</button>
                                 </div>
 
@@ -190,7 +190,7 @@
                             </p>
 
                             <div class="controls">
-                                <div class="button-gradient filled">
+                                <div class="button-gradient filled orange">
                                     <button data-dismiss="modal" class="btn">Have a nice journey on ACTED</button>
                                 </div>
                             </div>
@@ -228,7 +228,7 @@
                     </div>
 
                     <div class="controls">
-                        <div class="button-gradient filled">
+                        <div class="button-gradient filled orange">
                             <button class="btn submit" id="loginBtn">Login</button>
                         </div>
                     </div>
@@ -244,7 +244,7 @@
                     </div>
 
                     <div class="controls">
-                        <div class="button-gradient filled">
+                        <div class="button-gradient filled orange">
                             <button style="width: 220px;" class="btn" id="passwordRecovery">Send new password</button>
                         </div>
                     </div>
