--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/bookings.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/bookings.html.twig
@@ -36,7 +36,7 @@
                     <i class="pound">&pound;</i>
                     <i class="available"></i>
                     <div class="controls">
-                        <div class="button-gradient filled">
+                        <div class="button-gradient filled orange">
                             <button class="btn">Release</button>
                         </div>
                     </div>
