--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
@@ -173,138 +173,174 @@
 </form>#}
 
 <form action="#" class="detail-form">
+    <div class="row">
+        <div class="col-sm-12 no-pad">
+            <a href="#" class="pull-right print-act">
+                <i class="icon icon-print" aria-hidden="true"></i>
+                Print
+            </a>
+        </div>
+    </div>
     <div class="row clearfix">
         <div class="col-lg-6 col-md-6 col-sm-6 container-custom no-padding">
-            <h2 class="title event">Event details</h2>
+            <div class="row event-details-section">
+                <h2 class="title event">Event details</h2>
 
-            <div class="frame">
-                <label for="name_event">Event name</label>
-                <input id="name_event" type="text" disabled placeholder="{{ order.event.title }}" value="{{ order.event.title }}">
-            </div>
+                <div class="frame">
+                    <label for="name_event">Event name</label>
+                    <input id="name_event" type="text" placeholder="{{ order.event.title }}" value="{{ order.event.title }}">
+                </div>
 
-            <div class="row holder clearfix">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-custom-size">
-                    <div class="frame">
-                        <label for="datetimepicker">Date</label>
-                        <input id="datetimepicker" type="text" class="custom-size" disabled placeholder="{{ order.event.startingDate | date("Y:M:d") }}" value="{{ order.event.startingDate | date("Y:M:d")}}">
+                <div class="row holder clearfix">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-custom-size">
+                        <div class="frame">
+                            <label for="datetimepicker">Date</label>
+                            <input id="datetimepicker" type="text" class="custom-size" placeholder="{{ order.event.startingDate | date("Y:M:d") }}" value="{{ order.event.startingDate | date("Y:M:d")}}">
+                        </div>
+                        <div class="frame">
+                            <label for="event_time">Event timing</label>
+                            <input id="event_time" type="text" class="custom-size" placeholder="{{ order.event.timing }}" value="{{ order.event.timing }}">
+                        </div>
                     </div>
-                    <div class="frame">
-                        <label for="event_time">Event timing</label>
-                        <input id="event_time" type="text" class="custom-size" disabled accesskey="" placeholder="{{ order.event.timing }}" value="{{ order.event.timing }}">
+                    <div class="col-lg-6 col-md-6 col-sm-6 pull-right col-custom-size">
+                        <div class="frame">
+                            <label for="performance">1 day/multiple days</label>
+                            <input id="performance" type="text" class="custom-size" placeholder="2-day event" value="2-day event">
+                        </div>
+                        <div class="frame">
+                            <label for="country">Country</label>
+                            <input id="country" type="text" class="custom-size" placeholder="{{ order.event.countryName }}" value="{{ order.event.countryName }}" disabled>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 pull-right col-custom-size">
-                    <div class="frame">
-                        <label for="performance">1 day/multiple days</label>
-                        <input id="performance" type="text" class="custom-size" disabled placeholder="2-day event" value="2-day event">
+
+                <div class="frame">
+                    <label for="address">Address</label>
+                    <input id="address" type="text" placeholder="{{ order.event.address }}" value="{{ order.event.address }}">
+                </div>
+
+                <div class="row holder clearfix">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-custom-size">
+                        <div class="frame">
+                            <label for="venue_type">Venue type</label>
+                            <input id="venue_type" type="text" class="custom-size" placeholder="{{ order.event.venueType.venueType }}" value="{{ order.event.venueType.venueType }}">
+                        </div>
                     </div>
-                    <div class="frame">
-                        <label for="country">Country</label>
-                        <input id="country" type="text" class="custom-size" disabled placeholder="{{ order.event.countryName }}" value="{{ order.event.countryName }}" disabled>
+                    <div class="col-lg-6 col-md-6 col-sm-6 pull-right col-custom-size">
+                        <div class="frame">
+                            <label for="guests_count">Number of guests</label>
+                            <input id="guests_count" type="text" class="custom-size" placeholder="{{ order.event.numberOfGuests }}" value="{{ order.event.numberOfGuests }}">
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="frame">
-                <label for="address">Address</label>
-                <input id="address" type="text" placeholder="{{ order.event.address }}" value="{{ order.event.address }}">
-            </div>
-
-            <div class="row holder clearfix">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-custom-size">
-                    <div class="frame">
-                        <label for="venue_type">Venue type</label>
-                        <input id="venue_type" type="text" class="custom-size" disabled placeholder="{{ order.event.venueType.venueType }}" value="{{ order.event.venueType.venueType }}">
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 pull-right col-custom-size">
-                    <div class="frame">
-                        <label for="guests_count">Number of guests</label>
-                        <input id="guests_count" type="text" class="custom-size" disabled placeholder="{{ order.event.numberOfGuests }}" value="{{ order.event.numberOfGuests }}">
-                    </div>
+                <div class="frame">
+                    <label for="extra_info">Additional info</label>
+                    <textarea id="extra_info" placeholder="{{ order.event.comments }}">{{ order.event.comments }}</textarea>
                 </div>
             </div>
-
-            <div class="frame">
-                <label for="extra_info">Additional info</label>
-                <textarea disabled id="extra_info" placeholder="{{ order.event.comments }}">{{ order.event.comments }}</textarea>
+            <div class="row section-info-footer hidden-sm hidden-md hidden-lg">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-pad">
+                    <div class="custom-checkbox">
+                        <input id="details_agree_desktop" name="package-check" value="" type="checkbox" v-model="detailsAccepted" v-bind:disabled="userRole == 'ROLE_CLIENT'">
+                        <label for="details_agree_desktop">I agree with these details</label>
+                    </div>
+                </div>
             </div>
         </div>
-        <!--quote section start-->
-        <div class="col-lg-6 col-md-6 col-sm-6 no-padding quote-section">
-            <h2 class="title quot">Quote #{{ order.id }}</h2>
-            <!--quote section holder start-->
-            <div class="holder">
-                <!--service start-->
-                {% for p in order.performances %}
-                <article class="service">
-                    <h3 class="package-name">{{ p.data['title'] }}</h3>
-                    <ul class="">
-                    {% for package in p.data.packages %}
-                        <li>
-                            <strong class="sub-title">{{ package['name'] }}</strong>
-                            <div class="row">
-                                {% for option in package['options'] %}
-                                <div class="col-md-12 no-pad">
-                                    <span class="short" name="currency1" id="currency1">{{ option['qty'] }}</span>
-                                    <span class="">x</span>
-                                    <span class="short" name="currency11" id="currency11">{{ option['duration'] }} min</span>
-                                    <div class="pull-right">
-                                        <span class="short">{{ option['rates'][0]["price"]['amount'] }}</span>
-                                        <span class="pull-right">GBP</span>
+        <!--quote section sta~rt-->
+        <div class="col-lg-6 col-md-6 col-sm-6 no-padding">
+            <div class="row quote-section">
+                <h2 class="title quot">Quote #{{ order.id }}</h2>
+                <!--quote section holder start-->
+                <div class="holder">
+                    {% if order.status %}
+                        {% for p in order.performances %}
+                            <article class="service">
+                                <h3 class="package-name">{{ p.data['title'] }}</h3>
+                                <ul class="">
+                                    {% for package in p.data.packages %}
+                                        <li>
+                                            <strong class="sub-title">{{ package['name'] }}</strong>
+                                            <div class="row">
+                                                {% for option in package['options'] %}
+                                                    <div class="col-md-12 no-pad">
+                                                        <span class="short" name="currency1" id="currency1">{{ option['qty'] }}</span>
+                                                        <span class="">x</span>
+                                                        <span class="short" name="currency11" id="currency11">{{ option['duration'] }} min</span>
+                                                        <div class="pull-right">
+                                                            <span class="short">{{ option['rates'][0]["price"]['amount'] }}</span>
+                                                            <span class="pull-right">GBP</span>
+                                                        </div>
+                                                    </div>
+                                                {% endfor %}
+                                            </div>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </article>
+                        {% endfor %}
+                        <article class="service act-extras">
+                            <h3 class="package-name">Extra - 1</h3>
+                            <ul class="">
+                                <li>
+                                    <div class="row">
+                                        <div class="col-md-12 no-pad">
+                                            <strong class="sub-title">Standart Act</strong>
+                                            <span class="short" name="currency1" id="currency1">2</span>
+                                            <span class="">x</span>
+                                            <span class="short" name="currency11" id="currency11">45 min</span>
+                                            <div class="pull-right">
+                                                <span class="short">3.000</span>
+                                                <span class="pull-right">GBP</span>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                                {% endfor %}
-                            </div>
-                        </li>
-                    {% endfor %}
-                    </ul>
-                </article>
-                {% endfor %}
-                <article class="service act-extras">
-                    <h3 class="package-name">Extra - 1</h3>
-                    <ul class="">
-                        <li>
-                            <div class="row">
-                                <div class="col-md-12 no-pad">
-                                    <strong class="sub-title">Standart Act</strong>
-                                    <span class="short" name="currency1" id="currency1">2</span>
-                                    <span class="">x</span>
-                                    <span class="short" name="currency11" id="currency11">45 min</span>
-                                    <div class="pull-right">
-                                        <span class="short">3.000</span>
-                                        <span class="pull-right">GBP</span>
+                                    <div class="row">
+                                        <span class="extra-descr">Description of extra is really nice singe. and I’m writing it for fill this place</span>
                                     </div>
+                                </li>
+                            </ul>
+                        </article>
+                    {% else %}
+                        {% if user.artist is defined %}
+                            <div class="controls no-quote">
+                                <div class="button-gradient filled orange">
+                                    <button class="btn">Send a quote now</button>
                                 </div>
                             </div>
-                            <div class="row">
-                                <span class="extra-descr">Description of extra is really nice singe. and I’m writing it for fill this place</span>
+                        {% else %}
+                            <div class="no-quote-submitted">
+                                No quote submitted yet
                             </div>
-                        </li>
-                    </ul>
-                </article>
-                <!--service end-->
-            </div>
-            <div class="row">
-                <div class="text-box">
-                    <h3>Payment terms</h3>
-                    <p><span class="percent">{{ order.guaranteedDepositTerm }}%</span> guaranteed Deposit payment on <b>Escrow Account</b></p>
-                    <p><span class="percent">{{ order.guaranteedBalanceTerm }}%</span> guaranteed Balance payment on <b>Escrow Account</b></p>
+                        {% endif %}
+                    {% endif %}
                 </div>
-                <div class="controls">
-                    <div class="button-gradient filled">
-                        <button class="btn" type="submit">Edit Quotation</button>
+                <!--quote section holder end-->
+                {% if order.status %}
+                    <div class="row">
+                        <div class="text-box">
+                            <h3>Payment terms</h3>
+                            <p><span class="percent">30%</span> guaranteed Deposit payment on <b>Escrow Account</b></p>
+                            <p><span class="percent">50%</span> guaranteed Balance payment on <b>Escrow Account</b></p>
+                        </div>
+                        <div class="controls">
+                            <div class="button-gradient filled orange">
+                                <button class="btn" type="submit">Edit Quotation</button>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+            </div>
+            <div class="row section-info-footer hidden-sm hidden-md hidden-lg">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-pad">
+                    <div class="custom-checkbox">
+                        <input id="details_agree_mobile_1" name="details_agree_mobile_1" value="" type="checkbox" v-model="actsExtrasAccepted" v-bind:disabled="userRole == 'ROLE_CLIENT'">
+                        <label for="details_agree_mobile_1">I can provide the acts & extras selected</label>
                     </div>
                 </div>
             </div>
-            <!--quote section holder end-->
-            <ul class="miscellaneous-list">
-                <li>
-                    <a href="#"><i class="icon icon-print" aria-hidden="true"></i>Print</a>
-                </li>
-            </ul>
         </div>
         <!--quote section end-->
     </div>
-
 </form>
