--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/message.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/message.html.twig
@@ -38,7 +38,7 @@
                         </p>
 
                         <div class="controls">
-                            <div class="button-gradient filled">
+                            <div class="button-gradient filled orange">
                                 <button type="button" class="btn register">Send Quotation</button>
                             </div>
 
@@ -46,7 +46,7 @@
                                 <button type="button" class="btn register">Send Message</button>
                             </div>
 
-                            <div class="button-gradient">
+                            <div class="button-gradient orange">
                                 <button type="button" class="btn register">Not available</button>
                             </div>
                         </div>
