--- a/src/Acted/LegalDocsBundle/Resources/views/Default/cardsSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/cardsSection.html.twig
@@ -19,7 +19,7 @@
                                     {{ categoryCard.description }}
                                 </p>
 
-                                <div class="button-gradient filled follow">
+                                <div class="button-gradient filled follow orange">
                                     <button class="btn"><a href="search/{{ categoryCard.slug }}">See more</a></button>
                                 </div>
                             </div>
