--- a/src/Acted/LegalDocsBundle/Resources/views/Default/confirmBookingModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/confirmBookingModal.html.twig
@@ -106,7 +106,7 @@
                         <input id="details_agree" name="package-check" value="" type="checkbox" v-model="termsConditionsAccepted">
                         <label for="details_agree">I agree with these terms & condition</label>
                     </div>
-                    <div class="button-gradient filled">
+                    <div class="button-gradient filled orange">
                         <button type="button" class="btn register quotationSendbtn" v-on:click="proceedToPayment">Proceed to payment</button>
                     </div>
                 </div>
