--- a/src/Acted/LegalDocsBundle/Resources/views/Default/eventModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/eventModal.html.twig
@@ -90,7 +90,7 @@
                     <div class="col-lg-12 no-pad">
                         <div class="col-lg-12 padd_bottom_15px">
                             <div class="controls">
-                                <div class="button-gradient filled">
+                                <div class="button-gradient filled orange">
                                     <button class="btn" v-on:click="createEvent($event)">Send</button>
                                 </div>
                             </div>
