--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -158,7 +158,7 @@
                             </div>
 
                             <div class="controls">
-                                <div class="button-gradient filled">
+                                <div class="button-gradient filled orange">
                                     <button class="btn" id="quoteRequsetSend">Create an event</button>
                                 </div>
                             </div>
@@ -200,7 +200,7 @@
                         </p>
 
                         <div class="controls">
-                            <div class="button-gradient filled">
+                            <div class="button-gradient filled orange">
                                 <button data-dismiss="modal" class="btn">Have a nice journey on ACTED</button>
                             </div>
                         </div>
@@ -229,7 +229,7 @@
                         </p>
 
                         <div class="controls">
-                            <div class="button-gradient filled">
+                            <div class="button-gradient filled orange">
                                 <button data-dismiss="modal" class="btn">Have a nice journey on ACTED</button>
                             </div>
                         </div>
