--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -315,7 +315,7 @@
                     <div class="row">
 
                         <div class="controls show-more">
-                            <div class="button-gradient">
+                            <div class="button-gradient orange">
                                 <button data-dismiss="modal" class="btn">Show more</button>
                             </div>
                         </div>
