--- a/src/Acted/LegalDocsBundle/Resources/views/Default/subscribeBlock.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/subscribeBlock.html.twig
@@ -12,7 +12,7 @@
             <input type="text" placeholder="Enter your email">
 
             <div class="controls">
-                <div class="button-gradient filled">
+                <div class="button-gradient filled orange">
                     <button class="btn">Subscribe</button>
                 </div>
             </div>
