--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client/payments.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client/payments.html.twig
@@ -168,7 +168,7 @@
                             <button class="btn button-gradient orange">Cancel</button>
                         </div>
                         <div class="control-item controls">
-                            <div class="button-gradient">
+                            <div class="button-gradient orange">
                                 <button type="button" class="btn register">Not available</button>
                             </div>
                         </div>
