--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="controls">
-                    <div class="button-gradient filled">
+                    <div class="button-gradient filled orange">
                         <a v-bind:href="'/dashboard/chat/'+ order.chat.chat_id" class="btn">Chatroom</a>
                     </div>
                 </div>
