--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -40,7 +40,7 @@
                             </div>
 
                             <div class="controls">
-                                <div class="button-gradient follow">
+                                <div class="button-gradient follow orange">
                                     <button class="btn requestQuotePerformance" value="{{ performance.id }}">REQUEST FREE QUOTE</button>
                                 </div>
                             </div>
