--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
@@ -71,11 +71,11 @@
         </div>
         <div class="controls">
 
-            <div class="button-gradient follow">
+            <div class="button-gradient follow orange">
                 <button class="btn">Follow me</button>
             </div>
             {% if(is_granted('ROLE_CLIENT')) %}
-            <div class="button-gradient filled">
+            <div class="button-gradient filled orange">
                 <button data-toggle="modal" class="btn quoteRequestProfile">REQUEST FREE QUOTE</button>
             </div>
             {% endif %}
