--- a/src/Acted/LegalDocsBundle/Resources/public/css/globals/buttons.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/globals/buttons.css
@@ -78,13 +78,13 @@
     border-radius: 16px;
     display: inline-block;
     margin-right: 8px;
-
-    background: rgb(255,173,108); /* Old browsers */
-    background: -moz-linear-gradient(left,  rgba(255,173,108,1) 0%, rgba(255,117,58,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left,  rgba(255,173,108,1) 0%,rgba(255,117,58,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right,  rgba(255,173,108,1) 0%,rgba(255,117,58,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
-
+/*.controls .button-gradient {*/
+    /*background: rgb(255,173,108); !* Old browsers *!*/
+    /*background: -moz-linear-gradient(left,  rgba(255,173,108,1) 0%, rgba(255,117,58,1) 100%); !* FF3.6-15 *!*/
+    /*background: -webkit-linear-gradient(left,  rgba(255,173,108,1) 0%,rgba(255,117,58,1) 100%); !* Chrome10-25,Safari5.1-6 *!*/
+    /*background: linear-gradient(to right,  rgba(255,173,108,1) 0%,rgba(255,117,58,1) 100%); !* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ *!*/
+/*}*/
 
 .btn {
     padding: 0;
@@ -96,10 +96,6 @@
     box-shadow: none;
     outline: none !important;
 }
-
-
-
-
 
 .button-gradient.blue {
     background: rgb(88,149,243);
