--- a/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
@@ -23,7 +23,7 @@
                         </p>
 
                         <div class="controls">
-                            <div class="button-gradient filled">
+                            <div class="button-gradient filled orange">
                                 <button data-dismiss="modal" class="btn">Have a nice journey on ACTED</button>
                             </div>
                         </div>
