--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -27,7 +27,7 @@
                         </p>
 
                         <div class="controls">
-                            <div class="button-gradient filled">
+                            <div class="button-gradient filled orange">
                                 <button data-dismiss="modal" class="btn">Have a nice journey on ACTED</button>
                             </div>
                         </div>
@@ -57,7 +57,7 @@
                         </p>
 
                         <div class="controls">
-                            <div class="button-gradient filled">
+                            <div class="button-gradient filled orange">
                                 <button data-dismiss="modal" class="btn">Have a nice journey on ACTED</button>
                             </div>
                         </div>
@@ -87,7 +87,7 @@
                         </p>
 
                         <div class="controls">
-                            <div class="button-gradient filled">
+                            <div class="button-gradient filled orange">
                                 <button data-dismiss="modal" class="btn">Have a nice journey on ACTED</button>
                             </div>
                         </div>
