--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -17,7 +17,7 @@
                         <img id="entertainerImg" class="category-img" src="{{ asset('assets/images/pers1.png') }}" alt="">
 
                         <div class="controls category-controls">
-                            <div class="button-gradient follow">
+                            <div class="button-gradient follow orange">
                                 <button id="entertainerBtn" class="btn">I am an entertainer</button>
                             </div>
                         </div>
@@ -26,7 +26,7 @@
                         <img id="customerImg" class="category-img" src="{{ asset('assets/images/Group23.png') }}" alt="">
 
                         <div class="controls category-controls">
-                            <div class="button-gradient follow">
+                            <div class="button-gradient follow orange">
                                 <button id="customerBtn" class="btn">I want to book entertainment</button>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                                 </div>
 
                                 <div class="controls">
-                                    <div class="button-gradient filled">
+                                    <div class="button-gradient filled orange">
                                         <button id="stageThreeNextCustomer" type="submit" class="btn register submit">Register Now</button>
                                     </div>
 
@@ -145,7 +145,7 @@
                             </div>
 
                             <div class="controls">
-                                <div class="button-gradient filled">
+                                <div class="button-gradient filled orange">
                                     <button  id="stageThreeNext" type="submit" class="btn register submit">Register Now</button>
                                 </div>
 
@@ -181,7 +181,7 @@
                             </p>
 
                             <div class="controls">
-                                <div class="button-gradient filled">
+                                <div class="button-gradient filled orange">
                                     <button data-dismiss="modal" class="btn">Have a nice journey on ACTED</button>
                                 </div>
                             </div>
@@ -219,7 +219,7 @@
                     </div>
 
                     <div class="controls">
-                        <div class="button-gradient filled">
+                        <div class="button-gradient filled orange">
                             <button class="btn submit" id="loginBtn">Login</button>
                         </div>
                     </div>
@@ -235,7 +235,7 @@
                     </div>
 
                     <div class="controls">
-                        <div class="button-gradient filled">
+                        <div class="button-gradient filled orange">
                             <button style="width: 220px;" class="btn" id="passwordRecovery">Send new password</button>
                         </div>
                     </div>
@@ -257,14 +257,14 @@
             <div class="modal-body">
                 <div class="col-md-6">
                     <div class="controls category-controls">
-                        <div class="button-gradient follow">
+                        <div class="button-gradient follow orange">
                             <button id="signUpChoose" class="btn">Sign Up</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="controls category-controls">
-                        <div class="button-gradient follow">
+                        <div class="button-gradient follow orange">
                             <button id="LogInChoose" class="btn">Log In</button>
                         </div>
                     </div>
