--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSectionEdit.html.twig
@@ -125,11 +125,11 @@
         {% if is_granted('EDIT', artist) or is_granted('ROLE_ADMIN') %}
 
         {% else %}
-            <div class="button-gradient follow">
+            <div class="button-gradient follow orange">
                 <button class="btn">Follow me</button>
             </div>
 
-            <div class="button-gradient filled">
+            <div class="button-gradient filled orange">
                 <button data-toggle="modal" class="btn quoteRequestProfile">REQUEST FREE QUOTE</button>
             </div>
         {% endif %}
