--- a/src/Acted/LegalDocsBundle/Resources/views/Security/changePassword.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Security/changePassword.html.twig
@@ -36,7 +36,7 @@
             </ul>
             <div class="clearfix text-center">
                 <div class="controls">
-                    <div class="button-gradient filled">
+                    <div class="button-gradient filled orange">
                         <button disabled type="submit" id="passwordRecoveryForm" class="btn register">Submit</button>
                     </div>
                 </div>
